--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_profile_info.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_my_profile_info.xml
@@ -4,27 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Fragments.FragmentMyProfileInfo">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/textView5"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Moji podaci"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/changeAccountData"
+            style="@style/clean_button_margin"
+            android:drawableLeft="@drawable/ic_outline_account_circle_24"
+            android:text="Izmena Naloga" />
+
+        <Button
+            android:id="@+id/ChangePassword"
+            style="@style/clean_button_margin"
+            android:drawableLeft="@drawable/ic_outline_change_circle_24"
+            android:text="Promena Lozinke" />
+
+        <Button
+            android:id="@+id/getAccoutStatistics"
+            style="@style/clean_button_margin"
+            android:drawableLeft="@drawable/ic_outline_stats_24"
+            android:text="Pregled statistike" />
+
+        <Button
+            android:id="@+id/getMyFavorite"
+            style="@style/clean_button_margin"
+            android:drawableLeft="@drawable/ic_round_favorite_border_24"
+            android:text="Objave koje vam se sviđaju" />
+
+        <Button
+            android:id="@+id/inviteFriends"
+            style="@style/clean_button_margin"
+            android:drawableLeft="@drawable/ic_outline_share_24"
+            android:text="Pozovite prijatelje" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/buttonLogOut"
-        android:layout_width="wrap_content"
+        style="@style/Circular"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Log out"
-        app:layout_constraintBottom_toBottomOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        android:layout_gravity="bottom"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:drawableLeft="@drawable/ic_baseline_logout_24"
+        android:text="Izlogujte se"
+        android:drawableTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
