--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
         <ImageView
 
             android:id="@+id/imageView3"
-            android:layout_width="416dp"
+            android:layout_width="match_parent"
             android:layout_height="190dp"
             android:foreground="@drawable/b3"
             android:foregroundGravity="center_vertical|center|center_horizontal|fill"
@@ -26,8 +26,8 @@
         <ImageView
 
             android:id="@+id/imageView4"
-            android:layout_width="413dp"
-            android:layout_height="175dp"
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@id/imageView3"
             app:layout_constraintHorizontal_bias="0.0"
@@ -108,7 +108,7 @@
             app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="@+id/tvFragmentProfileInfoContainer"
             app:layout_constraintTop_toTopOf="@+id/tvFragmentProfileInfoContainer"
-            app:layout_constraintVertical_bias="0.97">
+            app:layout_constraintVertical_bias="0.87">
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -117,10 +117,12 @@
 
                 <TextView
                     android:id="@+id/tvFragmentProfileName"
-                    style="@style/title"
-                    android:gravity="center"
+                    android:textSize="23sp"
+                    android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginBottom="10dp"
                     android:text="Petar Petrović" />
             </TableRow>
 
@@ -135,8 +137,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textSize="17sp"
-                    android:text="PetarP" />
+                    android:text="PetarP"
+                    android:textSize="17sp" />
             </TableRow>
 
             <TableRow
@@ -144,7 +146,7 @@
                 android:layout_height="100dp">
 
                 <Button
-                    android:layout_height="15dp"
+                    android:layout_height="8dp"
                     android:background="@drawable/rounded_transparent_button"
                     android:clickable="false"
                     android:visibility="invisible" />
@@ -156,78 +158,86 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:weightSum="1">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:weightSum="3"
-                >
-                <TextView
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/tvFragmentProfilePosts"
-                    android:width="100dp"
-                    android:gravity="center"
-                    android:text="OBJAVE" />
 
-                <TextView
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_width="110dp"
-                    android:layout_weight="1"
-                    android:id="@+id/tvFragmentProfileFollowers"
-                    android:width="100dp"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:text="PRATIOCI" />
+                    android:orientation="horizontal"
+                    android:weightSum="3">
 
-                <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="110dp"
-                    android:layout_weight="1"
-                    android:id="@+id/tvFragmentProfileFollow"
-                    android:width="100dp"
-                    android:gravity="center"
-                    android:text="PRAĆENJA" />
-</LinearLayout>
+                    <TextView
+                        android:id="@+id/tvFragmentProfilePosts"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:width="100dp"
+                        android:textSize="15dp"
+                        android:textColor="#757471"
+                        android:gravity="center"
+                        android:text="OBJAVE" />
+
+                    <TextView
+                        android:id="@+id/tvFragmentProfileFollowers"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:width="100dp"
+                        android:textSize="15sp"
+                        android:clickable="true"
+                        android:textColor="#757471"
+                        android:gravity="center"
+                        android:text="PRATIOCI" />
+
+                    <TextView
+                        android:id="@+id/tvFragmentProfileFollow"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:width="100dp"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:textColor="#757471"
+                        android:text="PRAĆENJA" />
+                </LinearLayout>
             </TableRow>
 
             <TableRow
-                android:weightSum="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:gravity="center"
+                android:weightSum="1">
 
                 <LinearLayout>
-                <TextView
-                    android:id="@+id/tvFragmentProfilePostsNo"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:text="156"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
 
-                <TextView
-                    android:layout_weight="1"
-                    android:id="@+id/tvFragmentProfileFollowersNo"
-                    android:gravity="center"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:text="50"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tvFragmentProfilePostsNo"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="156"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_weight="1"
-                    android:id="@+id/tvFragmentProfileFollowNo"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="40"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/tvFragmentProfileFollowersNo"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="50"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvFragmentProfileFollowNo"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="40"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </TableRow>
         </TableLayout>
@@ -255,6 +265,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
             <Button
+                android:id="@+id/btnFragmentProfileShowMyRecensions"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:backgroundTint="#FFFFFF"
+                android:stateListAnimator="@null"
+                android:text="Istorija"
+                android:textColor="@color/cardview_dark_background"
+                app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
+                app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
+
+            <Button
                 android:id="@+id/btnFragmentProfileShowMyData"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
@@ -269,18 +292,6 @@
                 app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyRecensions"
                 app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
 
-            <Button
-                android:id="@+id/btnFragmentProfileShowMyRecensions"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_weight="1"
-                android:backgroundTint="#FFFFFF"
-                android:stateListAnimator="@null"
-                android:text="Istorija"
-                android:textColor="@color/cardview_dark_background"
-                app:layout_constraintStart_toEndOf="@+id/btnFragmentProfileShowMyPosts"
-                app:layout_constraintTop_toBottomOf="@+id/tvFragmentProfileInfoContainer" />
         </LinearLayout>
 
         <FrameLayout
