--- a/Client/BrzoDoLokacije/app/src/main/res/values/styles.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/styles.xml
@@ -28,4 +28,21 @@
         <item name="android:textSize">@dimen/header1_size</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="clean_button">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">#757471</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="clean_button_margin">
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">#757471</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginTop">7dp</item>
+    </style>
 </resources>
