--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_posts.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_posts.xml
@@ -18,7 +18,7 @@ android:orientation="vertical"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="110dp"
-            android:src="@drawable/ic_baseline_post_add_24"
+            android:src="@drawable/ic_baseline_map_24"
            />
 
         <TextView
@@ -28,7 +28,7 @@ android:orientation="vertical"
             android:layout_gravity="end"
             android:layout_marginEnd="20dp"
             android:clickable="true"
-            android:text="@string/dodaj_objavu"
+            android:text="Mapa objava"
             android:textSize="15sp"
             android:focusable="true" />
     </androidx.cardview.widget.CardView>
