--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_description.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_description.xml
@@ -11,24 +11,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_picture_background"
         android:padding="@dimen/component_padding"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/tvDescriptionLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="362dp"
-            android:gravity="top|start"
-            android:padding="@dimen/text_padding"
-            android:text="Opis"
-            android:textSize="@dimen/header1_size"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvDescription"
@@ -36,9 +20,9 @@
             android:layout_height="wrap_content"
             android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.526"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />
-
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/title"
@@ -63,6 +47,7 @@
             app:layout_constraintTop_toBottomOf="@+id/title">
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/rateStar1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -70,6 +55,7 @@
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/rateStar2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -77,6 +63,7 @@
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/rateStar3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -84,6 +71,7 @@
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/rateStar4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -91,6 +79,7 @@
                 android:src="@drawable/ic_round_star_outline_24" />
 
             <ImageView
+                android:clickable="true"
                 android:id="@+id/rateStar5"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
