--- a/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="unfollow">#c4c4c4</color>
     <color name="dark_blue_transparent">#DE093A4C</color>
     <color name="button_main">#183e4b</color>
+    <color name="grey">#747474</color>
 </resources>
