--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_preview.xml
@@ -40,15 +40,23 @@
                 android:textSize="@dimen/header2_size"
                 android:textColor="@color/unfollow"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="10dp">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvLastMessage"
-                android:text="hej, sta ima novo?"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:textAlignment="gravity"
                 android:textSize="@dimen/header2_size"
-                android:textColor="@color/unfollow"/>
+                android:textColor="@color/unfollow"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
