--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message.xml
@@ -24,7 +24,7 @@
         android:id="@+id/cvContainer"
         android:layout_width="wrap_content"
         android:minWidth="40dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:backgroundTint="@color/unfollow"
@@ -38,10 +38,12 @@
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="50"
+            android:maxWidth="300dp"
             android:backgroundTint="@color/unfollow"
             android:padding="5dp"
             android:paddingHorizontal="15dp"
-            android:text="blabla"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.cardview.widget.CardView>
 
