Dobar prikaz teksta koji zauzima vise linija pri kucanju poruka, izmenjen izgled polja za unos poruke #80

--- a/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message_other.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/chat_message_other.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:backgroundTint="#eef1f6"
+        android:backgroundTint="@color/purple_500"
         android:background="@drawable/view_corner_radius"
         app:cardCornerRadius="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:maxLines="50"
             android:maxWidth="300dp"
-            android:backgroundTint="#eef1f6"
+            android:textColor="@color/white"
             android:padding="5dp"
             android:paddingHorizontal="15dp"
             app:layout_constraintStart_toStartOf="parent"
