--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_comments.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_single_post_comments.xml
@@ -50,29 +50,60 @@
         app:layout_constraintTop_toBottomOf="@+id/postCommentLayout">
 
     </androidx.recyclerview.widget.RecyclerView>
-
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/postCommentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-        <EditText
-            android:id="@+id/NewComment"
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvParentCommentEdit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Unesite komentar ovde" />
+            android:minHeight="40dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginHorizontal="10dp"
+            android:elevation="16dp"
+            app:cardCornerRadius="20dp">
 
-        <ImageView
-            android:id="@+id/btnPostComment"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:backgroundTint="@color/white"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_baseline_send_24" />
 
-    </LinearLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/NewComment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/white"
+                android:hint="Unesite komentar..."
+                android:paddingLeft="10dp"
+                tools:ignore="TouchTargetSizeCheck"
+                android:inputType="textCapSentences|textMultiLine"/>
+
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvParentSendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:minHeight="40dp"
+            android:backgroundTint="@color/purple_500"
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:elevation="16dp"
+            app:cardCornerRadius="20dp">
+
+
+            <ImageButton
+                android:id="@+id/btnPostComment"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_send_white_24"
+                app:cornerRadius="16dp"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </androidx.cardview.widget.CardView>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
